--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SAPD FINANCIAL CID</title>
-    <script type="module" crossorigin src="/src/main.jsx"></script>
+    <title>SAPD FINANCIAL CID - by Axel Crow</title>
   </head>
   <body class="bg-gray-950 text-gray-100">
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
